src/test/deca/syntax/invalid/lexer/special_char_lex-lex.corr
GT: [@0,222:222='>',<2>,13:0]
LT: [@1,224:224='<',<3>,14:0]
EQUALS: [@2,226:226='=',<4>,15:0]
PLUS: [@3,228:228='+',<5>,16:0]
MINUS: [@4,230:230='-',<6>,17:0]
TIMES: [@5,232:232='*',<7>,18:0]
SLASH: [@6,234:234='/',<8>,19:0]
PERCENT: [@7,236:236='%',<9>,20:0]
DOT: [@8,238:238='.',<10>,21:0]
COMMA: [@9,240:240=',',<11>,22:0]
OPARENT: [@10,242:242='(',<12>,23:0]
CPARENT: [@11,244:244=')',<13>,24:0]
OBRACE: [@12,246:246='{',<14>,25:0]
CBRACE: [@13,248:248='}',<15>,26:0]
EXCLAM: [@14,250:250='!',<16>,27:0]
SEMI: [@15,252:252=';',<17>,28:0]
EQEQ: [@16,254:255='==',<18>,29:0]
NEQ: [@17,257:258='!=',<19>,30:0]
GEQ: [@18,260:261='>=',<20>,31:0]
LEQ: [@19,263:264='<=',<21>,32:0]
AND: [@20,266:267='&&',<22>,33:0]
OR: [@21,269:270='||',<23>,34:0]
DOT: [@22,290:290='.',<10>,37:0]
DOT: [@23,291:291='.',<10>,37:1]
PLUS: [@24,293:293='+',<5>,38:0]
PLUS: [@25,294:294='+',<5>,38:1]
EXCLAM: [@26,296:296='!',<16>,39:0]
PLUS: [@27,297:297='+',<5>,39:1]
OBRACE: [@28,299:299='{',<14>,40:0]
OPARENT: [@29,300:300='(',<12>,40:1]
CBRACE: [@30,301:301='}',<15>,40:2]
CPARENT: [@31,302:302=')',<13>,40:3]
LEQ: [@32,304:305='<=',<21>,41:0]
EQUALS: [@33,306:306='=',<4>,41:2]
TIMES: [@34,307:307='*',<7>,41:3]
